--- a/smopSamples/smop_externalsecret.yaml
+++ b/smopSamples/smop_externalsecret.yaml
@@ -1,19 +1,21 @@
-apiVersion: external-secrets.io/v1beta1
+apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: demo-k8s-secrets
-  namespace: psmo
+  name: smop-external-secret
 spec:
   refreshInterval: 1m
+  refreshPolicy: Periodic
   secretStoreRef:
     name: smop-secret-store
     kind: SecretStore
   target:
-    name: demo-k8s-secrets
+    name: smop-managed-secret
   data:
-    - secretKey: db-username
+    - secretKey: postgresCreds-dbconn
       remoteRef:
-        key: db-username
-    - secretKey: db-password
+        key: postgresCreds
+        property: dbconn
+    - secretKey: postgresCreds-pwd
       remoteRef:
-        key: db-password
+        key: postgresCreds
+        property: password
